<resources>
    <string name="app_name">My Application</string>
    <string name="_8">8</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_a">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_gty">-</string>
    <string name="_asd">.</string>
    <string name="_0">0</string>
    <string name="_dfr">=</string>
    <string name="_zre">+</string>
    <string name="c">c</string>

</resources>